# drekar-launch-process-cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
cmake/: drekar-launch-process-cpp-config.cmake.in  simple-launch-process-cpp-config.cmake.in
include/drekar_launch_process_cpp/: drekar_launch_process_cpp.h
include/simple_launch_process_cpp/: simple_launch_process_cpp.h
src/: drekar_launch_process_cpp_posix.cpp  drekar_launch_process_cpp_win32.cpp  simple_launch_process_cpp_posix.cpp  simple_launch_process_cpp_win32.cpp
test/: test_drekar_launch_process_cpp_callback_exit.cpp  test_drekar_launch_process_cpp_wait_exit.cpp  test_simple_launch_process_cpp_callback_exit.cpp  test_simple_launch_process_cpp_wait_exit.cpp
test/drekar-launch/: drekar-launch.yaml
